Adicionando cards com personagens

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"defer></script>
     <title>Galeria</title>
 </head>
 
@@ -33,25 +34,19 @@
                 <li><a href="javascript:void(0)">Loja</a></li>
             </ul>
         </div>
-        
+
     </header>
 
     <section>
-        <div>
+
+        <div class="title-text">
             <h1>Escolha Sua Classe</h1>
             <h4>Escolha a classe que você mais se identifica e avance na sua jornada</h4>
         </div>
+        <div class="classe-container" id="card-container">
+            
+        </div>
 
-        <img src="img/warrior-sucession.png" alt="imagem de samurai">
-        <img src="img/warrior-awakening.png" alt="imagem de samurai">
-        <img src="img/warrior-sucession.png" alt="imagem de samurai">
-        <img src="img/warrior-awakening.png" alt="imagem de samurai">
-        <img src="img/warrior-sucession.png" alt="imagem de samurai">
-        <img src="img/warrior-awakening.png" alt="imagem de samurai">
-        <img src="img/warrior-sucession.png" alt="imagem de samurai">
-        <img src="img/warrior-awakening.png" alt="imagem de samurai">
-        <img src="img/warrior-sucession.png" alt="imagem de samurai">
-        <img src="img/warrior-awakening.png" alt="imagem de samurai">
     </section>
 </body>
 
