--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"defer></script>
-    <title>Galeria</title>
+    <title>Black Desert</title>
 </head>
 
 <body>
