--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
         rel="stylesheet">
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      />
     <link rel="stylesheet" href="/css/style.css">
-    <script src="script.js"defer></script>
+    <script src="script.js"></script>
     <title>Black Desert</title>
 </head>
 
@@ -36,7 +40,7 @@
     </header>
             
     <section>
-
+        <h1 class="animate__animated animate__fadeInLeft">An animated element</h1>
         <div class="title-text">
             <h1>Escolha Sua Classe</h1>
             <h4>Escolha a classe que você mais se identifica e avance na sua jornada</h4>
